--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "dev": "nodemon",
-    "build": "tsc --outDir public",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
 },
     "keywords": [],
